--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.8'
 
 services:
   jupyter:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile
     # Or use the pre-built image from Docker Hub:
-    # image: budisentosa/testdockerpython:latest
+    image: ghcr.io/budisentosa/testdockerpython:latest
 
     container_name: jupyter-lab
 
