--- a/requirements.txt
+++ b/requirements.txt
@@ -7,30 +7,30 @@ debugpy==1.8.19
 decorator==5.2.1
 executing==2.2.1
 fonttools==4.61.1
-ipykernel==7.1.0
-ipython==9.8.0
+ipykernel==6.29.5
+ipython==8.31.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 joblib==1.5.3
 jupyter_client==8.7.0
 jupyter_core==5.9.1
-jupyterlab==4.3.5
+jupyterlab==4.2.5
 kiwisolver==1.4.9
 kneed==0.8.5
-matplotlib==3.10.8
+matplotlib==3.8.4
 matplotlib-inline==0.2.1
-narwhals==2.14.0
+narwhals==1.24.0
 nest-asyncio==1.6.0
-numpy==2.3.5
+numpy==1.26.4
 packaging==25.0
-pandas==2.3.3
+pandas==2.2.3
 parso==0.8.5
 pexpect==4.9.0
-pillow==12.0.0
+pillow==10.4.0
 platformdirs==4.5.1
-plotly==6.5.0
+plotly==5.24.1
 prompt_toolkit==3.0.52
-psutil==7.1.3
+psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
 Pygments==2.19.2
@@ -38,8 +38,8 @@ pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
 pyzmq==27.1.0
-scikit-learn==1.8.0
-scipy==1.16.3
+scikit-learn==1.5.2
+scipy==1.13.1
 seaborn==0.13.2
 six==1.17.0
 stack-data==0.6.3
@@ -50,4 +50,5 @@ traitlets==5.14.3
 typing_extensions==4.15.0
 tzdata==2025.3
 wcwidth==0.2.14
+httpx==0.27.2
 yellowbrick==1.5
