--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       # Optional: Disable token authentication (NOT recommended for production)
       # - JUPYTER_TOKEN=''
 
-    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root
+    command: jupyter lab --ip=0.0.0.0 --port=8888 --no-browser --allow-root --ServerApp.allow_origin='https://colab.research.google.com' --ServerApp.port_retries=0 --ServerApp.allow_credentials=True --ServerApp.token='' --ServerApp.password=''
 
     restart: unless-stopped
 
